crates/wasm/tests/snapshots/wasm_loading_tests__load_bitwise_wasm.snap
---
source: crates/wasm/tests/wasm_loading_tests.rs
expression: snapshot_content
---
---
source: crates/wasm/tests/wasm_loading_tests.rs
expression: wasm_load_result
---
WASM File: bitwise.wasm
============================================================
Success: true
Functions loaded: 3
============================================================
Module Output:
and:
  Node { operation: Inputs, inputs: [], output_types: [I32, I32] }
  Node { operation: WASMOp(I32And), inputs: [ValueOrigin { node: 0, output_idx: 0 }, ValueOrigin { node: 0, output_idx: 1 }], output_types: [I32] }
  Node { operation: Br(BreakTarget { depth: 0, kind: FunctionOrLoop }), inputs: [ValueOrigin { node: 1, output_idx: 0 }], output_types: [] }
or:
  Node { operation: Inputs, inputs: [], output_types: [I32, I32] }
  Node { operation: WASMOp(I32Or), inputs: [ValueOrigin { node: 0, output_idx: 0 }, ValueOrigin { node: 0, output_idx: 1 }], output_types: [I32] }
  Node { operation: Br(BreakTarget { depth: 0, kind: FunctionOrLoop }), inputs: [ValueOrigin { node: 1, output_idx: 0 }], output_types: [] }
xor:
  Node { operation: Inputs, inputs: [], output_types: [I32, I32] }
  Node { operation: WASMOp(I32Xor), inputs: [ValueOrigin { node: 0, output_idx: 0 }, ValueOrigin { node: 0, output_idx: 1 }], output_types: [I32] }
  Node { operation: Br(BreakTarget { depth: 0, kind: FunctionOrLoop }), inputs: [ValueOrigin { node: 1, output_idx: 0 }], output_types: [] }
