crates/wasm/tests/snapshots/wasm_loading_tests__load_func_call_wasm.snap
---
source: crates/wasm/tests/wasm_loading_tests.rs
expression: snapshot_content
---
---
source: crates/wasm/tests/wasm_loading_tests.rs
expression: wasm_load_result
---
WASM File: func_call.wasm
============================================================
Success: true
Functions loaded: 2
============================================================
Module Output:
func_0:
  Node { operation: Inputs, inputs: [], output_types: [I32, I32] }
  Node { operation: WASMOp(I32Add), inputs: [ValueOrigin { node: 0, output_idx: 0 }, ValueOrigin { node: 0, output_idx: 1 }], output_types: [I32] }
  Node { operation: Br(BreakTarget { depth: 0, kind: FunctionOrLoop }), inputs: [ValueOrigin { node: 1, output_idx: 0 }], output_types: [] }
main:
  Node { operation: Inputs, inputs: [], output_types: [] }
  Node { operation: WASMOp(I32Const { value: 15 }), inputs: [], output_types: [I32] }
  Node { operation: WASMOp(I32Const { value: 25 }), inputs: [], output_types: [I32] }
  Node { operation: WASMOp(Call { function_index: 0 }), inputs: [ValueOrigin { node: 1, output_idx: 0 }, ValueOrigin { node: 2, output_idx: 0 }], output_types: [I32] }
  Node { operation: Br(BreakTarget { depth: 0, kind: FunctionOrLoop }), inputs: [ValueOrigin { node: 3, output_idx: 0 }], output_types: [] }
