crates/wasm/tests/snapshots/wasm_loading_tests__load_nested_loop_wasm.snap
---
source: crates/wasm/tests/wasm_loading_tests.rs
expression: snapshot_content
---
---
source: crates/wasm/tests/wasm_loading_tests.rs
expression: wasm_load_result
---
WASM File: nested_loop.wasm
============================================================
Success: true
Functions loaded: 1
============================================================
Module Output:
nested_loop:
  Node { operation: Inputs, inputs: [], output_types: [I32] }
  Node { operation: WASMOp(I32Const { value: 0 }), inputs: [], output_types: [I32] }
  Node { operation: Loop { sub_dag: BlocklessDag { nodes: [Node { operation: Inputs, inputs: [], output_types: [I32, I32, I32, I32] }, Node { operation: WASMOp(I32LtU), inputs: [ValueOrigin { node: 0, output_idx: 1 }, ValueOrigin { node: 0, output_idx: 0 }], output_types: [I32] }, Node { operation: BrIfZero(BreakTarget { depth: 0, kind: Label(1) }), inputs: [ValueOrigin { node: 1, output_idx: 0 }], output_types: [] }, Node { operation: WASMOp(I32Const { value: 0 }), inputs: [], output_types: [I32] }, Node { operation: Loop { sub_dag: BlocklessDag { nodes: [Node { operation: Inputs, inputs: [], output_types: [I32, I32, I32] }, Node { operation: WASMOp(I32LtU), inputs: [ValueOrigin { node: 0, output_idx: 1 }, ValueOrigin { node: 0, output_idx: 0 }], output_types: [I32] }, Node { operation: BrIfZero(BreakTarget { depth: 0, kind: Label(3) }), inputs: [ValueOrigin { node: 1, output_idx: 0 }], output_types: [] }, Node { operation: WASMOp(I32Add), inputs: [ValueOrigin { node: 0, output_idx: 2 }, ValueOrigin { node: 0, output_idx: 0 }], output_types: [I32] }, Node { operation: WASMOp(I32Const { value: 1 }), inputs: [], output_types: [I32] }, Node { operation: WASMOp(I32Add), inputs: [ValueOrigin { node: 0, output_idx: 1 }, ValueOrigin { node: 4, output_idx: 0 }], output_types: [I32] }, Node { operation: Br(BreakTarget { depth: 0, kind: FunctionOrLoop }), inputs: [ValueOrigin { node: 0, output_idx: 0 }, ValueOrigin { node: 5, output_idx: 0 }, ValueOrigin { node: 3, output_idx: 0 }], output_types: [] }, Node { operation: Label { id: 3 }, inputs: [], output_types: [] }, Node { operation: Br(BreakTarget { depth: 1, kind: Label(2) }), inputs: [ValueOrigin { node: 0, output_idx: 1 }, ValueOrigin { node: 0, output_idx: 2 }], output_types: [] }] }, break_targets: [(0, [Label(2)])] }, inputs: [ValueOrigin { node: 0, output_idx: 1 }, ValueOrigin { node: 3, output_idx: 0 }, ValueOrigin { node: 0, output_idx: 3 }], output_types: [] }, Node { operation: Label { id: 2 }, inputs: [], output_types: [I32, I32] }, Node { operation: WASMOp(I32Const { value: 1 }), inputs: [], output_types: [I32] }, Node { operation: WASMOp(I32Add), inputs: [ValueOrigin { node: 0, output_idx: 1 }, ValueOrigin { node: 6, output_idx: 0 }], output_types: [I32] }, Node { operation: Br(BreakTarget { depth: 0, kind: FunctionOrLoop }), inputs: [ValueOrigin { node: 0, output_idx: 0 }, ValueOrigin { node: 7, output_idx: 0 }, ValueOrigin { node: 5, output_idx: 0 }, ValueOrigin { node: 5, output_idx: 1 }], output_types: [] }, Node { operation: Label { id: 1 }, inputs: [], output_types: [] }, Node { operation: Br(BreakTarget { depth: 1, kind: Label(0) }), inputs: [ValueOrigin { node: 0, output_idx: 3 }], output_types: [] }] }, break_targets: [(0, [Label(0)])] }, inputs: [ValueOrigin { node: 0, output_idx: 0 }, ValueOrigin { node: 1, output_idx: 0 }, ValueOrigin { node: 1, output_idx: 0 }, ValueOrigin { node: 1, output_idx: 0 }], output_types: [] }
    Node { operation: Inputs, inputs: [], output_types: [I32, I32, I32, I32] }
    Node { operation: WASMOp(I32LtU), inputs: [ValueOrigin { node: 0, output_idx: 1 }, ValueOrigin { node: 0, output_idx: 0 }], output_types: [I32] }
    Node { operation: BrIfZero(BreakTarget { depth: 0, kind: Label(1) }), inputs: [ValueOrigin { node: 1, output_idx: 0 }], output_types: [] }
    Node { operation: WASMOp(I32Const { value: 0 }), inputs: [], output_types: [I32] }
    Node { operation: Loop { sub_dag: BlocklessDag { nodes: [Node { operation: Inputs, inputs: [], output_types: [I32, I32, I32] }, Node { operation: WASMOp(I32LtU), inputs: [ValueOrigin { node: 0, output_idx: 1 }, ValueOrigin { node: 0, output_idx: 0 }], output_types: [I32] }, Node { operation: BrIfZero(BreakTarget { depth: 0, kind: Label(3) }), inputs: [ValueOrigin { node: 1, output_idx: 0 }], output_types: [] }, Node { operation: WASMOp(I32Add), inputs: [ValueOrigin { node: 0, output_idx: 2 }, ValueOrigin { node: 0, output_idx: 0 }], output_types: [I32] }, Node { operation: WASMOp(I32Const { value: 1 }), inputs: [], output_types: [I32] }, Node { operation: WASMOp(I32Add), inputs: [ValueOrigin { node: 0, output_idx: 1 }, ValueOrigin { node: 4, output_idx: 0 }], output_types: [I32] }, Node { operation: Br(BreakTarget { depth: 0, kind: FunctionOrLoop }), inputs: [ValueOrigin { node: 0, output_idx: 0 }, ValueOrigin { node: 5, output_idx: 0 }, ValueOrigin { node: 3, output_idx: 0 }], output_types: [] }, Node { operation: Label { id: 3 }, inputs: [], output_types: [] }, Node { operation: Br(BreakTarget { depth: 1, kind: Label(2) }), inputs: [ValueOrigin { node: 0, output_idx: 1 }, ValueOrigin { node: 0, output_idx: 2 }], output_types: [] }] }, break_targets: [(0, [Label(2)])] }, inputs: [ValueOrigin { node: 0, output_idx: 1 }, ValueOrigin { node: 3, output_idx: 0 }, ValueOrigin { node: 0, output_idx: 3 }], output_types: [] }
      Node { operation: Inputs, inputs: [], output_types: [I32, I32, I32] }
      Node { operation: WASMOp(I32LtU), inputs: [ValueOrigin { node: 0, output_idx: 1 }, ValueOrigin { node: 0, output_idx: 0 }], output_types: [I32] }
      Node { operation: BrIfZero(BreakTarget { depth: 0, kind: Label(3) }), inputs: [ValueOrigin { node: 1, output_idx: 0 }], output_types: [] }
      Node { operation: WASMOp(I32Add), inputs: [ValueOrigin { node: 0, output_idx: 2 }, ValueOrigin { node: 0, output_idx: 0 }], output_types: [I32] }
      Node { operation: WASMOp(I32Const { value: 1 }), inputs: [], output_types: [I32] }
      Node { operation: WASMOp(I32Add), inputs: [ValueOrigin { node: 0, output_idx: 1 }, ValueOrigin { node: 4, output_idx: 0 }], output_types: [I32] }
      Node { operation: Br(BreakTarget { depth: 0, kind: FunctionOrLoop }), inputs: [ValueOrigin { node: 0, output_idx: 0 }, ValueOrigin { node: 5, output_idx: 0 }, ValueOrigin { node: 3, output_idx: 0 }], output_types: [] }
      Node { operation: Label { id: 3 }, inputs: [], output_types: [] }
      Node { operation: Br(BreakTarget { depth: 1, kind: Label(2) }), inputs: [ValueOrigin { node: 0, output_idx: 1 }, ValueOrigin { node: 0, output_idx: 2 }], output_types: [] }
    Node { operation: Label { id: 2 }, inputs: [], output_types: [I32, I32] }
    Node { operation: WASMOp(I32Const { value: 1 }), inputs: [], output_types: [I32] }
    Node { operation: WASMOp(I32Add), inputs: [ValueOrigin { node: 0, output_idx: 1 }, ValueOrigin { node: 6, output_idx: 0 }], output_types: [I32] }
    Node { operation: Br(BreakTarget { depth: 0, kind: FunctionOrLoop }), inputs: [ValueOrigin { node: 0, output_idx: 0 }, ValueOrigin { node: 7, output_idx: 0 }, ValueOrigin { node: 5, output_idx: 0 }, ValueOrigin { node: 5, output_idx: 1 }], output_types: [] }
    Node { operation: Label { id: 1 }, inputs: [], output_types: [] }
    Node { operation: Br(BreakTarget { depth: 1, kind: Label(0) }), inputs: [ValueOrigin { node: 0, output_idx: 3 }], output_types: [] }
  Node { operation: Label { id: 0 }, inputs: [], output_types: [I32] }
  Node { operation: Br(BreakTarget { depth: 0, kind: FunctionOrLoop }), inputs: [ValueOrigin { node: 3, output_idx: 0 }], output_types: [] }
