crates/wasm/tests/snapshots/wasm_loading_tests__load_variables_wasm.snap
---
source: crates/wasm/tests/wasm_loading_tests.rs
expression: snapshot_content
---
---
source: crates/wasm/tests/wasm_loading_tests.rs
expression: wasm_load_result
---
WASM File: variables.wasm
============================================================
Success: true
Functions loaded: 1
============================================================
Module Output:
main:
  Node { operation: Inputs, inputs: [], output_types: [] }
  Node { operation: WASMOp(I32Const { value: 10 }), inputs: [], output_types: [I32] }
  Node { operation: WASMOp(I32Const { value: 5 }), inputs: [], output_types: [I32] }
  Node { operation: WASMOp(I32Add), inputs: [ValueOrigin { node: 1, output_idx: 0 }, ValueOrigin { node: 2, output_idx: 0 }], output_types: [I32] }
  Node { operation: Br(BreakTarget { depth: 0, kind: FunctionOrLoop }), inputs: [ValueOrigin { node: 3, output_idx: 0 }], output_types: [] }
